--- a/introduction/md.tex
+++ b/introduction/md.tex
@@ -40,7 +40,7 @@ where $k_\text{dihedral}$ describes the energy barrier for turning the dihedral 
 	\subcaptionbox{\label{md:fig_pot}}[6cm]{
 		\includegraphics[height=6cm]{figures/introduction/fig_potentials}
 	}%
-	\nicecaption{Interactions in MD}{(\subref{md:fig_bonds}): illustration of bonded interactions. (\subref{md:fig_pot}): schematic course of contributing potentials}
+	\nicecaption{Interactions in MD}{(\subref{md:fig_bonds}): Illustration of stretching $r$, bending $\theta$ and the dihedral angle between blue and green plane $\Phi$. (\subref{md:fig_pot}): schematic course of contributing potentials}
 	\label{md:figs}
 \end{figure}
 %
@@ -84,7 +84,7 @@ The \martini{} force field \autocites{martini}{martini22}{martini22_lipids} is o
 \begin{figure}
 	\centering
 	\includegraphics[width=.5\textwidth]{figures/introduction/fig_martini_mapping}
-	\nicecaption{\martini{} bead mapping}{\martini{} structure of \pip{}. Four heavy atoms are mapped to one \martini{} bead.}
+	\nicecaption{\martini{} bead mapping}{\martini{} structure of \pip{} with underlying atomistic structure. Four heavy atoms are mapped to one \martini{} bead.}
 	\label{md:martinimapping}
 \end{figure}
 %
