--- a/introduction/motivation.tex
+++ b/introduction/motivation.tex
@@ -22,7 +22,7 @@ The force is acting onto F1 and F2 parallel to the z-axis and is proportional to
 	\subcaptionbox{\label{motiv:forceillustr}}[0.49\textwidth]{
 		\includegraphics[height=5cm]{figures/introduction/forceapproach}
 	}%
-	\nicecaption{Inclination angle of FAK}{(\subref{motiv:sarascurves}): Distributions of $\beta$ obtained by \textcite{sara}. (\subref{motiv:forceillustr}): Illustration of the applied force.}
+	\nicecaption{Inclination angle of FAK}{(\subref{motiv:sarascurves}): Distributions of $\beta$ obtained by \textcite{sara}. The red curve shows the distribution for a fallen FAK. (\subref{motiv:forceillustr}): Illustration of the applied force. Pink and green line represents possible orientations of $\vec{d}_{F, z}$. The force is proportional to $\Delta z$.}
 \end{figure}
 %
 %
