--- a/introduction/fec.tex
+++ b/introduction/fec.tex
@@ -1,4 +1,3 @@
-\section{Free energy}
 In order to understand state transitions in physical systems the free energy is a key quantity. It is directly linked to the probability distribution for different states and other quantities can be derived easily.\\
 The free energy depends on the partition function and therefore on the considered thermodynamic ensemble. In this section only the Helmholtz free energy $A$, which refers to a canonical ensemble, is examined, but the concepts can be applied to other ensembles as well.
 \subsubsection{Partition function}
@@ -40,7 +39,7 @@ The free energy of a system as a function of a parameter $\xi$ is given as
 A(\xi) = - \beta \ln\left(\rho(\xi)\right)
 \end{equation}
 $\rho(\xi)$ is the probability distribution of $\xi$ and can be easily obtained in MD simulation by counting the number of the appropriate states. Therefore it is also referred as histogram. $\xi$ is called reaction coordinate and could be e.g. the distance between two molecules.\\
-However in reality $A(\xi)$ can have big barriers and because the potential energy $U$ is sharply distributed around its mean in $NVT$ simulations, $\rho{\xi}$ can hardly be sampled during a finite simulation.\\
+However in reality $A(\xi)$ can have big barriers and because the potential energy $U$ is sharply distributed around its mean in $NVT$ simulations, $\rho(\xi)$ can hardly be sampled during a finite simulation.\\
 \\
 One possibility to overcome this sampling problem is umbrella sampling \autocite{originalUmbrellaSampling}. In this approach the path $\xi$ is split up into distinct windows $[\xi_0, \xi_n]$. To each window $i$ a biasing potential $\hat{U}_i(\xi)$ can be applied to ensure a well sampling of $\xi$ around $\xi_i$. This changes the potential energy to
 \begin{equation}
